---
source: spade-tests/src/hir_lowering.rs
---
#[wal_traceable()]
struct T {
    a: (&bool, inv &bool)
}

entity test(t: T) -> T {
    #[wal_trace]
    let t = t;
    t
}


error: Wal tracing does not work on types with mixed-direction fields
  ┌─ testinput:8:9
  │
8 │     let t = t;
  │         ^ The field 'a' of the struct has both & and &mut wires
